--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@tryfabric/martian": "^1.1.1",
     "dotenv": "^10.0.0",
     "rss-parser": "^3.12.0",
-    "turndown": "^7.1.1"
+    "turndown": "^7.1.1",
+    "axios": "^0.21.1",
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
